# SyncRecentlyUsedFilesRecordsBeteenGandK

./: CMakeLists.txt  LICENSE  PKGBUILD  README.md  SyncRecentlyUsedFilesRecordsBeteenGandK.kdev4  krecentdocument.cpp  main.cpp
